--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <title>Obys Agency</title>
     <link rel="shortcut icon" href="./favicon.png" type="image/x-icon">
     <link rel="stylesheet" href="https://unpkg.com/sheryjs/dist/Shery.css" />
+    <link href="https://cdn.jsdelivr.net/npm/remixicon@4.5.0/fonts/remixicon.css"
+    rel="stylesheet"/>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -64,8 +66,56 @@
                 <h1>EXPERIENCE</h1>
             </div>
         </div>
-        <div id="page2"></div>
+        <div id="page2">
+            <div id="video-container">
+                <div id="video-cursor">
+                    <i class="ri-play-mini-fill"></i>
+                </div>
+                <img src="obys-bg-img.jpg" alt="">
+                <video autoplay loop muted src="Obys.mp4"></video>
+            </div>
+        </div>
         <div id="page3"></div>
+        <div id="page4">
+            <div id="page4-content">
+                <h1>ABOUT OBYS</h1>
+                <div class="underline"></div>
+                <p> Our agency is about people who love creating,designing and developing wow projects.In the same time we are a boutique agency that is more than the collective.We learn and grow , win and celebrate together.
+                </p> 
+                <div id="page4-flex">
+                    <img src="content-image01.jpg" alt="">
+                    <p> We are happy to present our new website and updated version of Obys agency. As      beforewe are open for new projects worldwide!
+                    <br><br>
+                    Would you like to have award winning site or unique branding style, please say hi to our manager —info@obys.agency.
+                    And we will help you with the pleasure.
+                    </p>
+                </div>
+                <div id="page4-sideb">
+                    <div id="page4-sideb-elem">
+                        <h4>Awwwards x16</h4>
+                        <p>SOTM, SOTD and Honrable Mentions</p>
+                    </div>
+                    <div id="page4-sideb-elem">
+                        <h4>Red Dot Award x1</h4>
+                        <p>Best of the Best</p>
+                    </div>
+                    <div id="page4-sideb-elem">
+                        <h4>FWA x11</h4>
+                        <p>FWA of The Day</p>
+                    </div>
+                    <div id="page4-sideb-elem">
+                        <h4>CSSDA x23</h4>
+                        <p>WOTM, WOTD and UI, UX, Innovation</p>
+                    </div>
+                    <div id="page4-sideb-elem">
+                        <h4>Behance x25</h4>
+                        <p>Interaction, Graphic Design</p>
+                    </div>
+                </div>
+                <div class="underline"></div>
+            </div>
+        </div>
+        <div id="page5"></div>
     </div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js" integrity="sha512-7eHRwcbYkK4d9g/6tD/mhkf++eoTHwpNM9woBxtPUBWm67zeAfFC+HrdoE2GanKeocly/VxeLvIqwvCdk7qScg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
