--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Obys Agency</title>
     <link rel="shortcut icon" href="./favicon.png" type="image/x-icon">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/locomotive-scroll@3.5.4/dist/locomotive-scroll.css">
     <link rel="stylesheet" href="https://unpkg.com/sheryjs/dist/Shery.css" />
     <link href="https://cdn.jsdelivr.net/npm/remixicon@4.5.0/fonts/remixicon.css"
     rel="stylesheet"/>
@@ -30,7 +31,7 @@
         </div>
     </div>
     <div id="main">
-        <div id="page1">
+        <div id="page1" data-scroll>
             <div id="nav">
                 <svg class="brand__svg" width="71" height="27" viewBox="0 0 71 27">
                     <path d="M40.7622 24.5917C40.7622 23.6724 41.4511 22.9829 42.3697 22.9829C43.2883 22.9829 43.9773 23.6724 43.9773 24.5917C43.9773 25.511 43.2883 26.2005 42.3697 26.2005C41.566 26.2005 40.7622 25.3961 40.7622 24.5917Z" fill="currentColor"></path>
@@ -66,7 +67,7 @@
                 <h1>EXPERIENCE</h1>
             </div>
         </div>
-        <div id="page2">
+        <div id="page2" data-scroll>
             <div id="video-container">
                 <div id="video-cursor">
                     <i class="ri-play-mini-fill"></i>
@@ -75,8 +76,8 @@
                 <video autoplay loop muted src="Obys.mp4"></video>
             </div>
         </div>
-        <div id="page3"></div>
-        <div id="page4">
+        <div id="page3" data-scroll></div>
+        <div id="page4" data-scroll>
             <div id="page4-content">
                 <h1>ABOUT OBYS</h1>
                 <div class="underline"></div>
@@ -115,7 +116,7 @@
                 <div class="underline"></div>
             </div>
         </div>
-        <div id="page5">
+        <div id="page5" data-scroll>
             <div class="elemt1">
                 <h1><span>SPORT</span> - FASHION - TECHNOLOGY -</h1>
                 <h1><span>SPORT</span> - FASHION - TECHNOLOGY -</h1>
@@ -133,7 +134,35 @@
                 <h1><span>SCIENCE</span> - PARTNERS - TRAVEL -</h1>
             </div>
         </div>
+        <div id="footer" data-scroll>
+            <h1>LET'S CREATE</h1>
+            <div class="underline"></div>
+            <div id="footer-div">
+                <div class="box">
+                    <h6>Social</h6>
+                    <h5>Dribble</h5>
+                    <h5>Behance</h5>
+                    <h5>Instagram</h5>
+                    <h5>Facebook</h5>
+                    <h5>Twitter</h5>
+                    <h5>Youtube</h5>
+                </div>
+                <div class="box">
+                    <h6>Address</h6>
+                    <h5>Originally from Kharkiv,</h5>
+                    <h5>working globally</h5>
+                </div>
+                <div class="box">
+                    <h6>Say Hi!</h6>
+                    <h5>info@obys,agency</h5>
+                </div>
+            </div>
+            <div class="underline"></div>
+            <h5>Obys Agency©️2023</h5>
+        </div>
     </div>
+
+    <script src="https://cdn.jsdelivr.net/npm/locomotive-scroll@3.5.4/dist/locomotive-scroll.js"></script>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js" integrity="sha512-7eHRwcbYkK4d9g/6tD/mhkf++eoTHwpNM9woBxtPUBWm67zeAfFC+HrdoE2GanKeocly/VxeLvIqwvCdk7qScg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 
